# airline-passenger-satisfaction-end-to-end-pipeline-ML

./: .gitignore  README.md  pyproject.toml
airline_satisfaction/: data_utils.py  evaluation.py  feature_importance.py  modeling.py  preprocessing.py
notebooks/: airline-passenger-satisfaction-eda-ml.ipynb.ipynb
scripts/: evaluate_model.py  extract_plots.py  train_model.py
